spotless and unit test fix
Signed-off-by: garyschulte <garyschulte@gmail.com>